# filechat

./: README.md  pyproject.toml
.github/workflows/: build.yaml  test.yaml
src/filechat/: __init__.py  chat.py  config.py  embedder.py  index.py  llm.py  tools.py  tui.py  watcher.py
tests/: conftest.py  test_all.py  test_chat.py  test_index.py
