[project]
name = "filechat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Milos Svana", email = "milos.svana@mailfence.com" }]
requires-python = ">=3.12"
dependencies = [
  "einops>=0.8.1",
  "faiss-cpu>=1.11.0.post1",
  "mistralai>=1.9.3",
  "pydantic>=2.11.7",
  "sentence-transformers>=5.0.0",
  "textual>=5.3.0",
  "watchdog>=6.0.0",
]

[project.scripts]
filechat = "filechat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
cpu = ["torch~=2.7.0"]
xpu = ["pytorch-triton-xpu~=3.3.0", "torch~=2.7.0"]
cuda = ["torch~=2.7.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "xpu" }, { extra = "cuda" }]]

[tool.uv.sources]
pytorch-triton-xpu = [{ index = "pytorch-xpu" }]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-xpu", extra = "xpu" },
  { index = "pytorch-cuda", extra = "cuda" },
]
shiv = { path = "../shiv", editable = true }

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.black]
line-length = 100
preview = true
unstable = true
enable-unstable-feature = [
  "multiline_string_handling",
  "string_processing",
  "wrap_long_dict_values_in_parens",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

